--- a/main.ipynb
+++ b/main.ipynb
@@ -1318,6 +1318,24 @@
     "        new_list.append(x)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### readking .md file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import markdown\n",
+    "\n",
+    "with open('', 'r') as f"
+   ]
   }
  ],
  "metadata": {
